<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/commentBox"
        android:layout_alignTop="@+id/spinner"
        android:text="@string/to"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="186dp"
        android:text="@string/current_weather"
        android:textColor="@color/colorPrimary" />

    <fragment
        android:id="@+id/mapFrag"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinner1"
        android:layout_alignParentStart="true"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="89dp"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sunnyButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_sunny"
                android:text="@string/sunny_button"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp" />


            <Button
                android:id="@+id/cloud"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_cloud"
                android:text="@string/cloud_button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/lightRainButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_light_rain_"
                android:text="@string/light_rain_button"
                android:textSize="10sp" />

            <Button
                android:id="@+id/showerButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_shower"
                android:text="@string/shower_button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/stormButton"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_storm"
                android:text="@string/storm_button"
                android:textSize="12sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="145dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="161dp"
        android:layout_marginStart="41dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView8"
        android:text="@string/from"
        android:textColor="@color/colorPrimary" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="143dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/spinner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="211dp"
        android:text="@string/delay_explained"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/commentBox"
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:gravity="top"
        android:hint="Comments"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="83dp"
        android:drawableTop="@drawable/ic_camera" />

    <Button
        android:id="@+id/submit"
        android:layout_width="77dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/cameraButton"
        android:text="@string/submit" />


</RelativeLayout>