<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:layout_toStartOf="@+id/spinner2"
        android:text="@string/trainNo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="MCG 923"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="204dp"
        android:text="@string/from" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/editText"
        android:layout_alignTop="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/to" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="205dp"
        android:text="@string/train" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="126dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/cgrlogo" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:text="@string/go" />

</RelativeLayout>